--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     
     <div class="section" id="section1">
 		<div class="intro">
-			<h1>Proffesional</h1>
+			<h1>Professional</h1>
 			<p>And you need some help from a fellow proffesional</p>
 		
 		</div>
