--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="section" id="section1">
 		<div class="intro">
 			<h1>Professional</h1>
-			<p>And you need some help from a fellow proffesional</p>
+			<p>And you need some help from a fellow professional</p>
 		
 		</div>
 	</div>
