--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
             <small> Software engineer / analyst & UX enthousiast</small>
             <br/><br/>
             stefaan.van.hoof@gmail.com
-            <br/>
+            <br/> <br/>
             <small>Nachtegaalstraat 15</small>
             <br/>
             <small>2060 Antwerpen</small>
             <br/>
-            <small>+32 486494105</small>
+            <small>+32 486 49 41 05</small>
 		</div>
     </div>
     
