--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <br/>
             <small>2060 Antwerpen</small>
             <br/>
-            <small>+32 486 49 41 05</small>
+            <small>+32486 49 41 05</small>
 		</div>
     </div>
     
