changed background on 2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
         
          #section1{
-            background-image: url(imgs/mockGrad5.png);
+            background-image: url(imgs/mockGradRad3.png);
             right:-90%;
             background-size: 100% 100%;
             background-repeat: no-repeat;
