--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Resume - Start Bootstrap Theme</title>
+    <title>Stefaan Van Hoof</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -398,7 +398,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a general computer wizard,
+          <p>Apart from being a developer,
              my favorite past time since my early 20's is backpack traveling around the world. 
              Where i enjoy exploring different cultures, trekking in nature parks and above all enjoying the local cuisine.</p>
           <p class="mb-0">On a more daily basis, i'm a little bit of a hobby cook and a general fan of all that is sci-fi.</p>
