--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <p class="mb-5">
              The last couple of years my career is taking a turn towards Technical analysis and architecture, but again with a big focus
             on trying to keep complex systems as simple as possible. My experience has thought me that all projects start
-            out smooth but that the real art of software engeneering is keeping it that way. Not a small feat, but one that can be can be accomplished
+            out smooth but that the real art of software engineering is keeping it that way. Not a small feat, but one that can be accomplished
             by simplicity, automated testing and SOLID design principles, the three pillars of my carrier in software.
           </p>
           <p class="mb-5">
