download + print friendly

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">CERTIFICATIONS</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="documents/Resume_Stefaan_Van_Hoof_3.0_clean.docx" download="Stefaan_van_Hoof_Cv_Print_Fiendly">Download</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -73,14 +76,14 @@
           </div>
           <h4 class="mb-5">A Software Simplicist</h4>
           <p class="mb-5">
-            In the software world there are a lot of methodologies, principles and believe systems to design, write and maintain software.
+            In the software world there are a lot of methodologies, principles and belief systems to design, write and maintain software.
             Throughout my years of experience and education, I have seen that one fundamental principle always seems to yield the best
             result. Simplicity.
           </p>
           <p class="mb-5">
          My favorite methodology in software is test-driven development. Why? Because it enforces simplicity on different coding
-        styles. And to some extend it leads the way to the SOLID principles. Also it’s a natural fit for separating business logic
-        in logical units, as in domain driven design.
+        styles. And to some extent it leads the way to the SOLID principles. Also it’s a natural fit for separating business logic
+        in to logical units, as in domain driven design.
 
           </p>
           <p class="mb-5">
@@ -93,7 +96,7 @@
           </p>
           <p class="mb-5">
              The last couple of years my career is taking a turn towards Technical analysis and architecture, but again with a big focus
-            on trying to keep complex systems as simple as possible. My experience has thought me that all projects start
+            on trying to keep complex systems as simple as possible. My experience has Taught me that all projects start
             out smooth but that the real art of software engineering is keeping it that way. Not a small feat, but one that can be accomplished
             by simplicity, automated testing and SOLID design principles, the three pillars of my carrier in software.
           </p>
@@ -167,7 +170,7 @@
               gaps where needed.
               </p>
               <p class="mb-5">
-              The web reporting tool, were I helped on the front-end as well as backend. I Implemented a Scheduling tool and worked on Important performance
+              The web reporting tool, were I helped on the frontend as well as backend. I Implemented a Scheduling tool and worked on Important performance
               and stability Issues.
               </p>
                 <p class="mb-5">
