--- a/index.html
+++ b/index.html
@@ -57,9 +57,16 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">CERTIFICATIONS</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="documents/Resume_Stefaan_Van_Hoof_3.0_clean.docx" download="Stefaan_van_Hoof_Cv_Print_Friendly">Download</a>
-          </li>
+          </li> -->
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger mt-5" href="documents/Resume_Stefaan_Van_Hoof_3.0_clean.docx" download="Stefaan_van_Hoof_Cv_Print_Friendly">
+                <i class="fa fa-file-word-o"></i>
+                <br> <span class="download-text">Download</span>
+              </a>
+            </li>
+           
         </ul>
       </div>
     </nav>
@@ -81,10 +88,9 @@
             result. Simplicity.
           </p>
           <p class="mb-5">
-         My favorite methodology in software is test-driven development. Why? Because it enforces simplicity on different coding
-        styles. And to some extent it leads the way to the SOLID principles. Also it’s a natural fit for separating business logic
-        in to logical units, as in domain driven design.
-
+          My favorite methodology in software is test-driven development. Why? Because it enforces simplicity on different coding
+          styles. And to some extent it leads the way to the SOLID principles. Also it’s a natural fit for separating business logic
+          in to logical units, as in domain driven design.
           </p>
           <p class="mb-5">
            Another set of interesting technologies and principles I picked up through the years of working on Internet of things technology
