--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             result. Simplicity.
           </p>
           <p class="mb-5">
-          My favorite methodology in software is test-driven development. Why? Because it enforces simplicity on different coding
+          My favorite methodology in software is test-driven development. Why ? Because it enforces simplicity on different coding
           styles. And to some extent it leads the way to the SOLID principles. Also it’s a natural fit for separating business logic
           in to logical units, as in domain driven design.
           </p>
@@ -97,7 +97,7 @@
           is the idea of messaging. Messaging is another very powerful way to separate blocks of software and just like test-driven
           development enforces simplicity on the smaller scale. Messaging promises to make the software simpler or at least more loosely
           coupled at the scale of architecture. Besides that, it can also be a very powerful tool when communication is needed across
-          different platforms and code bases. Or in the case of the Internet of things industry, when communicating across small devices
+          different platforms and code bases. Or in the case of the Internet of things, when communicating across small devices
           and services.
           </p>
           <p class="mb-5">
