--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           in to logical units, as in domain driven design.
           </p>
           <p class="mb-5">
-           Another set of interesting technologies and principles I picked up through the years of working on Internet of things technology
+           Another set of interesting technologies and principles I picked up through the years of working on Internet of things
           is the idea of messaging. Messaging is another very powerful way to separate blocks of software and just like test-driven
           development enforces simplicity on the smaller scale. Messaging promises to make the software simpler or at least more loosely
           coupled at the scale of architecture. Besides that, it can also be a very powerful tool when communication is needed across
@@ -101,7 +101,7 @@
           and services.
           </p>
           <p class="mb-5">
-             The last couple of years my career is taking a turn towards Technical analysis and architecture, but again with a big focus
+             The last couple of years my career is taking a turn towards technical analysis and architecture, but again with a big focus
             on trying to keep complex systems as simple as possible. My experience has Taught me that all projects start
             out smooth but that the real art of software engineering is keeping it that way. Not a small feat, but one that can be accomplished
             by simplicity, automated testing and SOLID design principles, the three pillars of my carrier in software.
