--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           and services.
           </p>
           <p class="mb-5">
-             The last couple of years my career is taking a turn towards technical analysis and architecture, but again with a big focus
+             The last couple of years of my career have been taking a turn towards technical analysis and architecture, but again with a big focus
             on trying to keep complex systems as simple as possible. My experience has Taught me that all projects start
             out smooth but that the real art of software engineering is keeping it that way. Not a small feat, but one that can be accomplished
             by simplicity, automated testing and SOLID design principles, the three pillars of my carrier in software.
@@ -160,27 +160,27 @@
               <h3 class="mb-0">Software Developer &amp; Technical analyst</h3>
               <div class="subheading mb-5">SD Worx</div>
               <p class="mb-5">
-               At SD Worx, I was hired for my growing expertise in service oriented Architecture and NServicebus as well as my ability to
-              work Independently and without much assistance. I was given a set off projects of witch I was the technical owner and Architect.
-              The first project was connecting an SD Worx Internal customer data distribution system to an external CRM.
+               At SD Worx, I was hired for my expertise in service oriented architecture and NServicebus as well as my ability to
+              work independently. I was given a set of projects of which I was the technical owner and architect.
+              The first project was connecting an SD Worx internal customer data distribution system to an external CRM.
               </p>
               <p class="mb-5">
-             My next project was creating a legacy long running process Application Into a modern web accessible Service, I used common
-            tools for the job, such as NServicebus, Web api, swagger to achieve this. The team maintaining the application needed some
-            additional training on web development, bus architecture and more Importantly test-driven design, which I gladly provided.
+              My next project was creating a legacy long running process application into a modern web accessible service, I used common
+              tools for the job, such as NServicebus, Web api and Swagger to achieve this. The team maintaining the application needed some
+              additional training on web development, bus architecture and more importantly test-driven design, which I gladly provided.
               </p>
               <p class="mb-5">
               Next was an internal GDPR testing data distribution framework. For SD Worx GDPR proof testing data which could be transferred from different
-              environments is very Important task that needed to be automated. I designed the web UI and background processes to achieve
-              this. The biggest challenges on this project was coordinating different Teams, managing their work, and filling the
+              environments is a very Important task that needed to be automated. I designed the web UI and background processes to achieve
+              this. The biggest challenges in this project where coordinating different teams, managing their work, and filling the
               gaps where needed.
               </p>
               <p class="mb-5">
-              The web reporting tool, were I helped on the frontend as well as backend. I Implemented a Scheduling tool and worked on Important performance
+              The web reporting tool, where I helped on the frontend as well as backend. I Implemented a Scheduling tool and worked on Important performance
               and stability Issues.
               </p>
                 <p class="mb-5">
-                  <b>Technologies used: </b>REST OData API, Dynatrace, Nservicebus, full .NET stack SOA &amp; DDD, Control M, KnockoutJs, Angular, Js, Ts, Tfs, Git, Teamcity, ...
+                  <b>Technologies used: </b>REST OData API, Dynatrace, Nservicebus, full .NET stack SOA &amp; DDD, Control M, KnockoutJs, Angular, Js, Ts, Tfs, Git, Teamcity
                 </p>
             </div>
             <div class="resume-date text-md-right">
@@ -194,18 +194,18 @@
                 <div class="subheading mb-5">AGIDENS</div>
                 <p class="mb-5">
                  At Agidens I’m working on a brand new industrial software platform (Factory 4.0). It aims to make the life of truck drivers and industry
-                operators easier by helping creating smart factories. A lot of software needs to communicate in these environments. And that's
-                where my Iot and software communication expertise comes in.
+                operators easier by helping to create smart factories. A lot of software needs to communicate in these environments and that's
+                where my software communication expertise comes in.
                 </p>
                 <p class="mb-5">
                  Besides making things smart and connected, Agidens and Rombit realized that things need to look good as well. And I’m the
-                lucky guy who is helping on this as well.
+                lucky guy who is helping on this.
                 My main contribution was introducing and implementing a service oriented architecture and connecting industrial devices
                 using the AMQP/RabbitMQ message protocol. Also my expertise in WPF &amp; MVVM was highly valued by my colleges.
                 </p>
                
                 <p class="mb-5">
-                  <b>Technologies used: </b>RabbitMQ, WPF MVVM, full .NET stack SOA &amp; DDD, Visio, Git, TeamCity...
+                  <b>Technologies used: </b>RabbitMQ, WPF MVVM, full .NET stack SOA &amp; DDD, Visio, Git, TeamCity
                 </p>
               </div>
               <div class="resume-date text-md-right">
@@ -219,16 +219,16 @@
                   <div class="subheading mb-5">Fifthplay</div>
                   <p class="mb-5">
                    Working on integration of energy measurement devices, thermostats, blinds, HVAC, ... on the Fifthplay Iot platform. we used
-                  a full .NET stack: C#, Nservicebus, MVC, EF and there is whas lot of emphasis on testing and clean code. With NServiceBus/RabbitMq
-                  We created a full scaling service oriented Iot platform. I think its fair to say that most of my technical skills find their roots in this project.
-                  Some of my college's where outsourced and needed some extra training and management, which i gladly provided.
+                  a full .NET stack: C#, Nservicebus, MVC, EF and there was a lot of emphasis on testing and clean code. With NServiceBus/RabbitMq
+                  We created a full scaling service oriented Iot platform. I think it's fair to say that most of my technical skills find their roots in this project.
+                  Some of my colleagues were outsourced and needed some extra training and management, and i was happy to assist.
                   </p>
                   <p class="mb-5">
                    In AngularJs and Asp.net I designed and created a B2B single page style administration portal with the focus on a clean and user friendly
                    UI. 
                   </p>
                   <p class="mb-5">
-                    <b>Technologies used: </b>RabbitMQ, WPF MVVM, full .NET stack SOA &amp; DDD,Angularjs, webApi (Rest), Oauth 2.0, IdentityServer 2.0, Visio, Service insight, Azure, Git, Jenkins,...
+                    <b>Technologies used: </b>RabbitMQ, WPF MVVM, full .NET stack SOA &amp; DDD,Angularjs, webApi (Rest), Oauth 2.0, IdentityServer 2.0, Visio, Service insight, Azure, Git, Jenkins
                   </p>
                 </div>
                 <div class="resume-date text-md-right">
@@ -408,7 +408,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
           <p>Apart from being a developer,
-             my favorite past time since my early 20's is backpack traveling around the world. 
+             my favorite past time since my early 20's has been traveling around the world. 
              Where i enjoy exploring different cultures, trekking in nature parks and above all enjoying the local cuisine.</p>
           <p class="mb-0">On a more daily basis, i'm a little bit of a hobby cook and a general fan of all that is sci-fi.</p>
         </div>
