--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                  Besides making things smart and connected, Agidens and Rombit realized that things need to look good as well. And I’m the
                 lucky guy who is helping on this.
                 My main contribution was introducing and implementing a service oriented architecture and connecting industrial devices
-                using the AMQP/RabbitMQ message protocol. Also my expertise in WPF &amp; MVVM was highly valued by my colleges.
+                using the AMQP/RabbitMQ message protocol. Also my expertise in WPF &amp; MVVM was highly valued by my colleagues.
                 </p>
                
                 <p class="mb-5">
