--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
         <div class="my-auto">
           <h2 class="mb-5">Skills</h2>
 
-          <div class="subheading mb-3">Core Programming</div>
+          <h3 class="mb-3">Core Programming</h3>
 
-          <ul class="list-inline list-icons">
+          <ul class="list-inline list-icons mb-5">
             <li class="list-inline-item">
               <i class="devicons devicons-visualstudio"></i>
               <h5>Visual Studio</h5>
@@ -318,8 +318,9 @@
             </li>
           </ul>
 
-            <div class="subheading mb-3">Web</div>
-            <ul class="list-inline list-icons">
+            <h3 class="mb-3 mt-3">Web</h3>
+
+            <ul class="list-inline list-icons mb-5">
               <li class="list-inline-item">
                 <i class="devicons devicons-html5"></i>
                 <h5>HTML</h5>
@@ -370,8 +371,9 @@
               </li>
             </ul>
 
-          <div class="subheading mb-3">WorkFlow &amp; Tools</div>
-          <ul class="list-inline list-icons">
+          <h3 class="mb-3 mt-3">WorkFlow &amp; Tools</h3>
+
+          <ul class="list-inline list-icons mb-5">
               <li class="list-inline-item">
                 <i class="devicons devicons-scrum"></i>
                 <h5>Scrum</h5>
