add skills baloise

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             
               </p>
                 <p class="mb-5">
-                  <b>Technologies used: </b>Sparx Enterprise Architect,REST API, full .NET stack SOA &amp; DDD, AngularJs 4, Ts, Tfs, WCF
+                  <b>Technologies used: </b>Sparx Enterprise Architect,REST API, full .NET stack SOA &amp; DDD, AngularJs 4, Ts, Tfs, WCF, Oracle DB
                 </p>
             </div>
             <div class="resume-date text-md-right">
@@ -320,6 +320,10 @@
               <i class="devicons devicons-database"></i>
               <h5>Sql Server</h5>
             </li>
+             <li class="list-inline-item">
+                <i class="devicons devicons-oracle"></i>
+                <h5>Oracle</h5>
+              </li>
             <li class="list-inline-item">
               <h4 class="text-logo">Soa</h4>
               <h5>Service oriented</h5>
@@ -351,6 +355,10 @@
             <li class="list-inline-item">
               <h4 class="text-logo">UML</h4>
               <h5>Analysis</h5>
+            </li>
+             <li class="list-inline-item">
+              <h4 class="text-logo">Sparx EA</h4>
+              <h5>Enterprise Architect</h5>
             </li>
           </ul>
 
@@ -405,6 +413,7 @@
                 <i class="devicons devicons-npm"></i>
                 <h5>Npm</h5>
               </li>
+             
             </ul>
 
           <h3 class="mb-3 mt-3">WorkFlow &amp; Tools</h3>
