--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <h5>Sql Server</h5>
             </li>
              <li class="list-inline-item">
-                <i class="devicons devicons-oracle"></i>
+                <i class="devicons devicons-database"></i>
                 <h5>Oracle</h5>
               </li>
             <li class="list-inline-item">
